# cuticulus

./: .env.example  .envrc  .flake8  .gitignore  GUI_main.py  Manifest.toml  Project.toml  README.md  default.nix  environment.yaml  flake.nix  juliapkg.json  notebook.ipynb  pyproject.toml  requirements.txt  setup.py  shell.ci.nix  shell.nix  visualization.ipynb
.github/: CODEOWNERS  codecov.yml
.github/workflows/: release.yaml  run-tests.yml
GUI/objects/: textbox.py
cuticle_analysis/: __init__.py  __main__.py  const.py
cuticle_analysis/antweb/: __init__.py  specimen.py
cuticle_analysis/assets/: icons.py
cuticle_analysis/core/: __init__.py  arguments.py  dataset.py  display.py
cuticle_analysis/datasets/: __init__.py  all.py  dataset.py  helper.py  rs.py  sub.py  utils.py
cuticle_analysis/datasets/data_FS/: helper.py  node.py
cuticle_analysis/models/: __init__.py  cnn.py  model.py
cuticulus/: __init__.py  __main__.py  console.py  const.py  datasets.py  messages.py  models.py
cuticulus/assets/: icons.py
cuticulus/core/: __init__.py  collages.py  rand.py
cuticulus/core/datasets/: builder.py  download.py  downloader.py  full.py  helper.py  imutils.py  labels.py  loader.py  splitter.py  sub.py
cuticulus/core/datasets/browser/: helper.py  node.py
cuticulus/core/datasets/types/: __init__.py  all.py  bg.py  rs.py
cuticulus/core/models/: __init__.py  helper.py  kviews.py
cuticulus/core/prediction/: __init__.py  predictor.py
cuticulus/mlutils/: __init__.py  torch.py
gui/: __main__.py  const.py  gui.py  shell.nix
gui/objects/: image_viewer.py  textbox.py
gui/objects/buttons/: buttons.py
gui/objects/buttons/file_browser/: main.py
gui/objects/panes/: pane.py  species_pane.py
gui/objects/panes/file_browser/: main.py
nix/: default.nix  pylatex.nix  sources.json
paper/: .gitignore  aci.cls  article.bib  main.bib  main.tex  paper.bib  paper.tex
paper/assets/: CASENT0217419.tex  results.tex
paper/tables/: all_samples_full.tex  all_samples_int.tex  all_samples_pct.tex  experiment_1.tex  rs_samples_full.tex  rs_samples_int.tex  rs_samples_pct.tex  rs_samples_sub.tex
scripts/: analyze_results.py  background.ipynb  background_inference.ipynb  build.sh  collages.ipynb  data_spread.py  evaluation.ipynb  full.ipynb  gabor.ipynb  gaussian.ipynb  gen_assests.sh  images.ipynb  images_cr.py  notebook.ipynb  notebook.jl  subimage.ipynb  transfer.py  visualization.ipynb
scripts/experiments/: __init__.py  base.py  experiment.py  experiment_1.py  experiment_2.py  torch_utils.py
