[tool.poetry]
name = "cuticulus"
version = "0.0.4"
description = ""
authors = ["Noah Gardner <ngngardner@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

beartype = "^0.9.0"
rich = "^10.12.0"
python-dotenv = "^0.21.0"

juliacall = "^0.9.6"
google-cloud-storage = "^2.5.0"

numpy = "^1.22.2"
openpyxl = "^3.0.9"
pandas = "^1.3.4"
Pillow = "^8.4.0"
scikit-learn = "^1.1.2"
scipy = "^1.9.1"
torch = "^1.10.2"

pygame = "^2.1.2"
scikit-image = "^0.19.2"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"
autopep8 = "^1.5.7"

jupyter = "^1.0.0"
ipykernel = "^6.9.1"
nbconvert = "^6.5.0"

matplotlib = "^3.5.1"
grad-cam = "^1.3.7"
seaborn = "^0.11.2"

[tool.poetry.scripts]
cuticulus = 'cuticulus.__main__:main'
gui = 'gui.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
